- updated sdk version and gradle to allow Android App Bundle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -564,8 +564,8 @@ We pride ourselves on being an all inclusive club and cater to all standards and
     <string name="type4_3_picURL">https://imgur.com/zCetEUb</string>
     <string name="type4_3_desc">This club has grown very fast, and proved that there\'re plenty of
         eager runners in Clapham! They are a very friendly bunch and not in the least intimidating.
-        As such we\'d highly recommend them for beginners, but they're not short on speedy Gonzales
-        either, so if you're looking for good competition this could well be the club for you.</string>
+        As such we\'d highly recommend them for beginners, but they\'re not short on speedy Gonzales
+        either, so if you\'re looking for good competition this could well be the club for you.</string>
     <string name="type4_3_homeURL">https://www.claphamchasers.co.uk/</string>
     <string name="type4_3_rosterURL">https://www.thepowerof10.info/clubs/club.aspx?clubid=2539</string>
 
@@ -620,7 +620,7 @@ We very much see Athlete development as a Core principle of H.A.C and helping an
     <string name="type4_8_desc">A South London club with a great juniors section, very strong on
         track training (for all ages!), but with experience in everything up to Ultra Distance.
         They have great coaches, a lovely mix of ages from an enthusiastic team of youngsters to
-        vets who've been running many a decade. A well organized and diverse club who regularly
+        vets who\'ve been running many a decade. A well organized and diverse club who regularly
         feature in the medals.</string>
     <string name="type4_8_homeURL">http://www.hernehillharriers.org/</string>
     <string name="type4_8_rosterURL">https://www.thepowerof10.info/clubs/club.aspx?clubid=660</string>
@@ -693,10 +693,10 @@ The club welcomes prospective athletes from the age of eight years and upwards o
         a few juniors, many young people, a few in their eighties and everything in-between.
         However, although we are large, we like to think we retain a friendly, small club atmosphere
         and always welcome newcomers.
-Our roots were in road running but these days our members take part in all sorts of sporting
+        Our roots were in road running but these days our members take part in all sorts of sporting
         activities loosely related to running. We compete in road races all year round. Additionally,
         in the winter we also do cross country, taking part in two leagues, as well as in County and
-        National Championships; and in summer, we have men's and women's track &amp; field teams in the
+        National Championships; and in summer, we have men\'s and women\'s track &amp; field teams in the
         Southern Athletics League, the vets league, and the Rosenheim league. The other major focus
         in summer of course is triathlon and duathlon racing, with members competing at every
         distance (in fact several hundred club members only ever compete in multi-sport). We have
@@ -738,7 +738,7 @@ Shaftesbury are a Community Club catering for all levels of athlete - all we ask
         In order to encourage runners of all abilities, the club has had a long standing policy of
         frequently \'turning back\' to pick up those running at the back of the pack. If you have any
         doubts about whether you can keep up with the pace, or of dropping off the back and getting
-        lost, fear not, we won't leave you behind!
+        lost, fear not, we won\'t leave you behind!
 If you are interested in joining us come along to one of our sessions and speak to whoever is
         leading the run. You are welcome to run with us for a few weeks before formally joining
         and paying your subscription</string>
